--- a/css/style.css
+++ b/css/style.css
@@ -1,213 +1,214 @@
 html {  
-  font-family: 'raleway', sans-serif; 
+font-family: 'raleway', sans-serif; 
    color: black; 
   line-height: 1.4;  
    font-size: 110%; 
    box-sizing: border-box;
   }
 
-  *,::before, *::after {  
-    box-sizing: inherit;
+*,::before, *::after {  
+box-sizing: inherit;
   }
   
-  h1, h2, h3, h4 
-  {  font-family: 'raleway', sans-serif;
-    font-weight: 600px;
-    font-size: 200%;
+h1, h2, h3, h4 {
+font-family: 'raleway', sans-serif;
+font-weight: 600px;
+font-size: 200%;
   }
     
-  .bg-black {  
-     background-color: black;
-    }
+.background {  
+  background-color: black;
+ }
     
     
-    header {  
-      display: flex;  
-      justify-content: space-between;  
-      align-items: center;  
-      color: white;
-    }
+header {  
+display: flex;  
+justify-content: space-between;  
+align-items: center;  
+color: white;
+}
     
-    header ul { 
-       display: flex;
-      }
+header ul { 
+ display: flex;
+ }
 
-    .hero-img { 
-       display: block;  
-       margin: 0 auto;
-      }
+.hero-img { 
+display: block;  
+margin: 0 auto;
+ }
 
-    img { 
-       width: 100%;
-      }
+img { 
+width: 100%;
+ }
 
-    .wrapper { 
-       max-width: 1200px;  
-       margin: 0 auto; 
-       padding: 2em 0;
-      }
+.wrapper { 
+max-width: 1200px;  
+margin: 0 auto; 
+padding: 2em 0;
+ }
 
-    nav ul { 
-       list-style-type: none; 
-        padding-left: 0;
-      }
+nav ul { 
+list-style-type: none; 
+padding-left: 0
+}
 
-    nav { 
-       text-align: left;
-      }
+nav { 
+text-align: left;
+}
       
-      nav ul li {  
-        display: inline;
-      } 
+nav ul li {  
+display: inline;
+} 
 
-    nav a:link {  
-      padding: .5em .75em .5em .75em;  
-      border-radius: 8px;
-    }
+nav a:link {  
+padding: .5em .75em .5em .75em;  
+border-radius: 8px;
+}
 
-    nav a:link, ul a:visited { 
-       color: white;  
-       border: 2px solid 8px;  
-       text-decoration: none;
-      }
+nav a:link, ul a:visited { 
+color: white;  
+border: 2px solid 8px;  
+text-decoration: none;
+ }
 
-      nav a:hover, ul a:focus { 
-         background-color: red;  
-         color: black;  
-         border: 2px solid black;
-        }
-
-    .intro {  
-      display: flex;  
-      align-items: center; 
-       padding-bottom: 0;
-      } 
-
-    .background {
-        background-color: black;
-      }
-      
-      footer {  
-        color: white;  
-        text-align: center;
-      }
-
-     .services { 
-       background-color: #fafafa;
-      }
-
-     .service-grid {  
-      display: grid; 
-       grid-template-columns: repeat(3,1fr);  
-       gap: 2em;
-      }
-     
-     article { 
-       background-color: white;  
-       border-radius: 4px;  
-       padding: 0 1em; 
-        display: flex;  
-        flex-direction: column; 
-         justify-content: flex-start;
-        }
+nav a:hover, ul a:focus { 
+background-color: white;  
+color: black;  
+border: 2px solid black;
+}
         
-        article p { 
-           margin: 0;
-          }
+
+.intro {  
+display: flex;  
+align-items: center; 
+padding-bottom: 0;
+} 
+
+.background {
+ background-color: black;
+}
+      
+footer {  
+ color: white;  
+text-align: center;
+}
+
+.myservices { 
+background-color: #fafafa;
+ }
+
+.servicegrid{  
+display: grid; 
+grid-template-columns: repeat(3,1fr);  
+gap: 2em;
+}
      
-     article .price { 
-       margin-top: .5em; 
-        flex-grow: 1; 
-         font-size: 135%;
-        }
+article { 
+background-color: white;  
+border-radius: 4px;  
+padding: 0 1em; 
+display: flex;  
+flex-direction: column; 
+justify-content: flex-start;
+}
+        
+article p { 
+margin: 0;
+}
      
-     button { 
-       background-color: black; 
-        display: inline-block;  
-        padding: .25em .5em;  
-        align-self: flex-start;  
-        border-radius: 4px;  
-        margin: 2em 0 2em 0;  
-        color:white;  
-        text-decoration: none;
-      }
+article .price { 
+margin-top: .5em; 
+flex-grow: 1; 
+ font-size: 135%;
+ }
      
-     .contact,.work { 
-       text-align: center;  
-       max-width: 60%;  
-       margin: 0 auto;
-      }
+.button { 
+background-color: black; 
+display: inline-block;  
+padding: .25em .5em;  
+align-self: flex-start;  
+border-radius: 4px;  
+margin: 2em 0 2em 0;  color:white;  
+text-decoration: none;
+}
      
-     .wrapper cite { 
-       color: lightgrey;
-      }
+.mycontact,.work { 
+text-align: center;  
+max-width: 60%;  
+margin: 0 auto;
+}
+     
+.wrapper cite { 
+color: lightgrey;
+}
 
-       .quote { 
-         color: white;  
-         background-color: black;
-        }
+.quote { 
+color: white;  
+ background-color: black;
+}
 
-       .grid { 
-         display: grid; 
-          grid-template-columns: repeat(6,1fr);
-        }
+.portfoliogrid { 
+display: grid; 
+grid-template-columns: repeat(6,1fr);
+}
 
-       .grid img:nth-child(1){ 
-         grid-column:1/4; 
-          grid-row: 1;
-        }
+.portfoliogrid img:nth-child(1){ 
+ grid-column:1/4; 
+grid-row: 1;
+}
 
-     .grid img:nth-child(2) { 
-       grid-column:4/7; 
-        grid-row: 1;
-      }
-      .grid img:nth-child(3) {  
-        grid-column:1/3; 
-         grid-row: 2;
-        }
+.portfoliogrid img:nth-child(2) { 
+grid-column:4/7; 
+grid-row: 1;
+}
 
-     .grid img:nth-child(4) {  
-      grid-column:3/5;
-        grid-row: 2;
-      }
+.portfoliogrid img:nth-child(3) {  
+grid-column:1/3; 
+grid-row: 2;
+ }
 
-     .grid img:nth-child(5) { 
-       grid-column:5/7; 
-        grid-row: 2;
-      }
+.portfoliogrid img:nth-child(4) {  
+grid-column:3/5;
+grid-row: 2;
+}
 
-     .flex {
-       display: flex; 
-        justify-content: space-evenly;
-      }
+.portfoliogrid img:nth-child(5) { 
+grid-column:5/7; 
+ grid-row: 2;
+}
 
-     .flex blockquote {  
-      width: 60%; 
-       text-align: center;
-      }
+.flex {
+ display: flex; 
+justify-content: space-evenly;
+ }
+
+.flex blockquote {  
+ width: 60%; 
+text-align: center;
+}
        
-       h1 { 
-         font-size: 275%;
-        }
+h1 { 
+font-size: 275%;
+}
         
-        .h2 { 
-           text-align: center; 
-            font-size: 250%;
-          }
+.h2 { 
+text-align: center; 
+font-size: 250%;
+}
 
-     .name { 
-       font-size: 300%;
-      }
+.name { 
+font-size: 300%;
+ }
 
-     .icons {  
-      display: flex;  
-      justify-content:center;  
-      list-style-type: none; 
-       padding:0;  
-      }
+.icons {  
+display: flex;  
+justify-content:center;  
+ list-style-type: none; 
+padding:0;  
+}
 
-     .icons li {  
-      width: 50px;  
-      padding: 0 6px;  
-      margin:  1.5em 0;
-    }
+.icons li {  
+width: 50px;  
+padding: 0 6px;  
+margin:  1.5em 0;
+}
