HTML and CSS checker updates

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ box-sizing: inherit;
   
 h1, h2, h3, h4 {
 font-family: 'raleway', sans-serif;
-font-weight: 600px;
+font-weight: bold;
 font-size: 200%;
   }
     
